another swagger addition before documenting on task 1
